--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body, html{
     margin: 0;
     font-size: 16px;
     font-family: Lato;
-    font-weightL 400;
+    font-weight: 400;
     line-height: 1.8em;
     color: #666;
 }
