--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body, html{
 }
 
 .section-light{
-    background-color: #e28d8d;
+    background-color: #dbc8c8;
     color: #666;
     opacity: 0.7;
 }
