--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body, html{
 }
 
 .section-light{
-    background-color: #dbc8c8;
+    background-color: #eee2e2;
     color: #666;
     opacity: 0.7;
 }
